TEST_PROGRAMS/INVALID/04/73.go
package main

func f() {
    return
}

func main() {
    // Non lvalue in assignment
    f()++
}
